--- a/dancefloor.html
+++ b/dancefloor.html
@@ -31,7 +31,9 @@
       </div>
   </header>
 
-  <div class="island" id="song"></div>
+  <div class="island" id="song">
+
+  </div>
   
     <script src="src/init.js"></script>
   </body>
