--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,8 +15,14 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/shakeDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/RickAstley.js"></script>
+  <script src="src/shakeDancer.js"></script>
+  <script src="src/Kim.js"></script>
+  <script src="src/BounceDancer.js"></script>
+  <script src="src/Trump.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
