--- a/dancefloor.html
+++ b/dancefloor.html
@@ -23,7 +23,7 @@
         </div>
         <span class="title">object dance party</span>
         <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>   -->  
-        <a href="#" class="getRickRollin" data-dancer-maker-function-name="RickAstley">awesome dance moves!!!</a>
+        <a href="#" class="getRickRollin" data-dancer-maker-function-name="RickAstley">Get Schwitfy!!!!!</a>
         <a href="#" class="TrumpShaking" data-dancer-maker-function-name="Trump">Deploy Our Fearless Leader</a>
         <a href="#" class="KimShaking" data-dancer-maker-function-name="Kim">The Supreme People's Assembly</a>
         <a href="#" class="lineUp" data-dancer-maker-function-name="#">Line up!</a>
