--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -7,6 +7,8 @@
   <script src="lib/mocha/mocha.js"></script>
   <script src="lib/chai/chai.js"></script>
   <script src="lib/sinon/sinon.js"></script>
+  <script src="lib/jquery-ui.js"></script>
+  <script src="lib/jquery-ui.css"></script>
   <script>
     mocha.setup('bdd');
     window.expect = chai.expect;
@@ -16,12 +18,13 @@
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="spec/shakeDancerSpec.js"></script>
+  <script src="spec/bounceDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
-  <script src="src/blinkyDancer.js"></script>
-  <script src="src/RickAstley.js"></script>
-  <script src="src/shakeDancer.js"></script>
-  <script src="src/Kim.js"></script>
   <script src="src/BounceDancer.js"></script>
+  <script src="src/blinkyDancer.js"></script>
+  <script src="src/shakeDancer.js"></script>
+  <script src="src/RickAstley.js"></script>
+  <script src="src/Kim.js"></script>
   <script src="src/Trump.js"></script>
 </head>
 <body>
